2007-04-29  Yen-Ju Chen <yjchen gmail.com>

	* Remove unnecessary HEADER_INSTALL_DIR.

2007-04-27  Yen-Ju Chen <yjchen gmail.com>

	* Turn IconKit into frameworks in order to have resources.
	* Include GNUstep.icontheme as resource to be loaded as defualt theme.
	  Tested with Vindallo.

2007-04-26  Quentin Mathe <qmathe@club-internet.fr>

	Last tweaks to make Icon Theme support effective.
	* Source/IKIcon.m: Added a logging statement for debugging.
	* Source/IKIconTheme.m:
	(-findAllThemeBundles): Modified to look for icon themes in Themes 
	directory directly too.
	(+theme): Improved to return a default theme when no theme has already been
	loaded and activated.
	(-iconPathForIdentifier:): Fixed not to return nil when the identifier 
	already includes filename extension. Added a logging statement.

2007-04-20  Yen-Ju Chen <yjchenx gmail>

	* Return nil if icon is not found.

2007-03-19  Yen-Ju Chen <yjchenx gmail>

	* Disable unit kit if not specified.

2007-03-16  Quentin Mathe <qmathe@club-internet.fr>

	* Headers/IconKit.h: Includes IKIconTheme.h now.

2007-03-16  Quentin Mathe <qmathe@club-internet.fr>

	* Source/IKIcon.m: Updated formatting and indentation to be cleaner and
	match GNUstep coding style rules.

2007-03-13  Quentin Mathe <qmathe@club-internet.fr>

	* Headers/IKIcon.h: Updated formatting and indentation to be cleaner and
	match GNUstep coding style rules.

2007-03-13  Quentin Mathe <qmathe@club-internet.fr>

	* Source/IKIcon.m (-initWithIdentifier:, -update): Updated to use 
	IKIconTheme and -[NSImage imageNamed:] only as a fallback.

2007-03-13  Quentin Mathe <qmathe@club-internet.fr>

	* GNUmakefile.preamble:
	* GNUmakefile.postamble:
	Deleted old content not needed at all now we use etoile.make.
	* Source/GNUmakefile: Replaced GNUSTEP_INSTALLATION_DIR by 
	ETOILE_CORE_MODULE.

2007-03-13  Quentin Mathe <qmathe@club-internet.fr>

	New icon theme support (not yet used by IKIcon)
	* Headers/IKIconTheme.h:
	* Source/IKIconTheme.m:
	Added.