@@ -11,7 +11,7 @@
 //  Headers:
 // -----------------------------------------------------------------------------
 
-#include "IKIcon.h"
+#import <IconKit/IKIcon.h>
 
 
 // -----------------------------------------------------------------------------
